--- a/adhererAsso.css
+++ b/adhererAsso.css
@@ -1,3 +1,10 @@
+body{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
 nav {
     background-color: #fff;
     height: 80px;
@@ -39,10 +46,76 @@ nav {
     background-color: #f1f1f1;
   }
 
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .container-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    background:rgba(0, 0, 0, 0.1);
+  }
+
+  .container-left h1 {
+    font-size: 50px;
+    font-weight: 700;
+    color: #282828;
+    margin-bottom: 20px;
+  }
+
+  .container-left p {
+    text-align: justify;
+    font-size: 20px;
+    color: #282828;
+    margin-bottom: 20px;
+  }
+
+  .container-left span {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #0099ff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .container-left span:hover {
+    color: #0077cc;
+  }
+
+  .container-right {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+
+  .container-right h2{
+    
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #282828;
+  }
+
+
   form {
     background-color: #282828;
     color: #fff;
-    padding: 20px;
+    padding: 40px;
     border-radius: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 350px;
