:lipstick: ADD style of page content

--- a/style/our-events.css
+++ b/style/our-events.css
@@ -116,3 +116,92 @@ main .banner div a {
 main .banner div a:hover {
   box-shadow: inset 0 0px 20px rgba(0, 0, 0, .4);
 }
+
+main .main-content {
+  width: 80vw;
+  margin: 1rem auto;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+main .main-content div#cta {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 50px auto;
+}
+
+main .main-content div#cta .title {
+  width: 30%;
+}
+
+main .main-content div#cta .title p span {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  color: #f9c330;
+}
+
+main .main-content div#cta .title p {
+  line-height: normal;
+  margin: 0;
+  width: 100%;
+}
+
+main .main-content div#cta form {
+  background-color: #042443;
+  color: #fff;
+  padding: 2rem;
+  display: flex;
+  border-radius: 10px;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  font-size: 20px;
+  gap: 15px;
+}
+
+main .main-content div#cta form div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+}
+
+main .main-content div#cta form div .civil-input {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+}
+
+main .main-content div#cta form div .civil-input input{
+  margin: 3px 15px 0 5px;
+}
+
+main .main-content div#cta form div .civil-input input:checked{
+  accent-color: #f9c330;
+}
+
+main .main-content div#cta form div input {
+  width: 50%;
+  border: none;
+  padding: 5px;
+}
+
+main .main-content div#cta form  button {
+  width: 80%;
+  padding: 10px 0; 
+  margin: 50px 0 0;
+  font-size: 20px;
+  border: none;
+  background-color: #f9c330;
+  font-weight: bold;
+  color: #fff;
+}
+
+main .main-content div#cta form  button:hover {
+  cursor: pointer;
+  box-shadow: inset 0 0px 20px rgba(0, 0, 0, .4);
+}
