--- a/style/Project-info.css
+++ b/style/Project-info.css
@@ -41,3 +41,33 @@ nav li a {
   transition: background-color 0.3s ease;
 }
 
+h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+main {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 50px 20px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+
+a {
+  color: #F5A623;
+  text-decoration: none;
+  border-bottom: 2px solid #1111;
+  transition: all 0.2s ease;
+}
+
+a:hover {
+  color: #1111;
+  border-bottom: 2px solid transparent;
+}
