--- a/index.mjml
+++ b/index.mjml
@@ -8,6 +8,16 @@
                 background-color: #232B36;
             }
         </mj-style>
+
+        <mj-raw>
+            <script async src="http://googletagmanager.com/gtag/js?id=G-RYKHR597RD"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'G-RYKHR597RD');
+            </script>
+        </mj-raw>
     </mj-head>
     <mj-body background-color="white">
         <mj-section>
@@ -67,7 +77,7 @@
         <mj-section>
             <mj-column>
                 <mj-button width="400px" font-size="16px" background-color="white" line-height="25px" >
-                    <a class="button" href="{{ link }}" style="color: white; text-decoration: none; padding: 15px 50px; font-size: 16px; font-weight:bold; border-radius: 5px;">Nous rejoindre</a>
+                    <a class="button" href="https://jstnate.github.io/WebMarketing_VilleDeParis/adhererAsso.html?utm_source=newsletter&utm_medium=email&utm_campaign=join-association" style="color: white; text-decoration: none; padding: 15px 50px; font-size: 16px; font-weight:bold; border-radius: 5px;">Nous rejoindre</a>
                 </mj-button>
             </mj-column>
         </mj-section>
