--- a/event.mjml
+++ b/event.mjml
@@ -11,6 +11,15 @@
                 text-shadow:"1px 1px black"
             }
         </mj-style>
+        <mj-raw>
+            <script async src="http://googletagmanager.com/gtag/js?id=G-RYKHR597RD"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'G-RYKHR597RD');
+            </script>
+        </mj-raw>
     </mj-head>
     <mj-body background-color="white">
         <mj-section>
@@ -69,7 +78,7 @@
             <mj-column vertical-align="middle">
 
                 <mj-button width="300px" font-size="16px" background-color="white">
-                    <a class="button" href="#" style="text-decoration: none; padding: 15px ; color: white; padding-right: 50px ; padding-left: 50px; font-size: 16px; font-weight:bold; border-radius: 8px;">En savoir plus</a>
+                    <a class="button" href="https://jstnate.github.io/WebMarketing_VilleDeParis/our-events.html?utm_source=newsletter&utm_medium=email&utm_campaign=event_promotion" style="text-decoration: none; padding: 15px ; color: white; padding-right: 50px ; padding-left: 50px; font-size: 16px; font-weight:bold; border-radius: 8px;">En savoir plus</a>
                 </mj-button>
 
             </mj-column>
